--- a/main.tex
+++ b/main.tex
@@ -1888,7 +1888,7 @@ That means, the memory cost of saving $\bm{C}$ is again $O(KN)$ as was shown in 
 
 
 \begin{frame}
-    \frametitle{\texttt{MERIT} in Noisy Case}
+    \frametitle{\texttt{MERIT} in the Noisy Case}
     To sum up, in the noisy case, under some reasonable assumptions, the proposed method \texttt{MERIT} can
     \begin{itemize}
         \item Extract $\mathcal{K}$ exactly.
@@ -1897,6 +1897,9 @@ That means, the memory cost of saving $\bm{C}$ is again $O(KN)$ as was shown in 
 \end{frame}
 
 
+\begin{frame}
+    \frametitle{You should have an informal theorem here!}
+\end{frame}
 
 \section{Experiment Demonstration}%
 \label{sec:real_demonstration}
